--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -17,12 +17,20 @@ source-repository head
 library 
     hs-source-dirs: 
         lib/src
+        lib/test
     exposed-modules:
         Numeric.Tensile.Tensor
         Numeric.Tensile.Operations.Linear.Unlifted
+        Test.Numeric.Tensile.Dimensions.Gen
+        Test.Numeric.Tensile.Dimensions.Index.Predicate
+        Test.Numeric.Tensile.Operations.Linear.Predicate
+        Test.Numeric.Tensile.Tensor.Gen
+    signatures:
+        Test.Numeric.Tensile.Tensor.Gen.Internal
     build-depends:
         base == 4.*,
         backprop,
+        hedgehog,
         tensile-signatures == 0.0.*,
         tensile-dimensions == 0.0.*,
         vector,
@@ -36,31 +44,6 @@ library
         TypeApplications,
         TypeFamilies,
         TypeOperators 
-    default-language: Haskell2010
-
-library tensile-test
-    hs-source-dirs: 
-        lib/test
-    exposed-modules:
-        Test.Numeric.Tensile.Dimensions.Gen
-        Test.Numeric.Tensile.Dimensions.Index.Predicate
-        Test.Numeric.Tensile.Tensor.Gen
-        Test.Numeric.Tensile.Operations.Linear.Predicate
-    signatures:
-        Test.Numeric.Tensile.Tensor.Gen.Internal
-    build-depends:
-        base == 4.*,
-        hedgehog,
-        tensile,
-        tensile-dimensions == 0.0.*,
-        vector
-    default-extensions: 
-        RankNTypes,
-        ScopedTypeVariables,
-        TypeInType,
-        TypeApplications,
-        TypeOperators,
-        OverloadedLists
     default-language: Haskell2010
 
 library local-signatures
@@ -130,7 +113,6 @@ test-suite test
         hedgehog,
         tensile,
         tensile-dimensions == 0.0.*,
-        tensile-test,
         reference,
         reference-test
     default-extensions:
@@ -148,6 +130,7 @@ executable main
     build-depends:
         base == 4.*,
         reference,
+        reference-test,
         tensile,
         tensile-dimensions == 0.0.*,
         vector
