--- a/tensile-dimensions/package.cabal
+++ b/tensile-dimensions/package.cabal
@@ -25,8 +25,7 @@ library
         base == 4.*,
         combinat,
         dimensions,
-        finite-typelits,
-        singletons
+        finite-typelits
     default-extensions: 
         ConstraintKinds, 
         FlexibleContexts,
