--- a/tensile-tensorflow/package.cabal
+++ b/tensile-tensorflow/package.cabal
@@ -14,14 +14,6 @@ source-repository head
   type: git
   location: https://github.com/cmk/tensile
 
-library local-signatures
-    hs-source-dirs: 
-        local
-    build-depends:
-        base == 4.*,
-        tensile-signatures == 0.0.*
-    default-language: Haskell2010
-
 library 
     hs-source-dirs: 
         lib/src
@@ -31,8 +23,8 @@ library
         Numeric.Tensile.Operations.Quantization.Internal
     build-depends:
         base == 4.*,
-        finite-typelits,
         tensile-dimensions == 0.0.*,
+        tensorflow,
         vector,
         vector-sized
     default-extensions:
@@ -65,29 +57,3 @@ library tensile-tensorflow-test
         TypeOperators,
         OverloadedLists
     default-language: Haskell2010
-
-test-suite test
-    type:                
-        exitcode-stdio-1.0
-    hs-source-dirs: 
-        test
-    main-is:            
-        test.hs
-    other-modules:
-        Test.Numeric.Tensile.Dimensions.Index.Property 
-        Test.Numeric.Tensile.Operations.Linear.Property
-    build-depends:       
-        base == 4.*,
-        hedgehog,
-        tensile,
-        tensile-dimensions == 0.0.*,
-        tensile-tensorflow,
-        tensile-tensorflow-test
-    default-extensions:
-        ScopedTypeVariables,
-        TypeApplications,
-        TypeInType,
-        TypeOperators,
-        OverloadedLists
-    default-language: Haskell2010
-    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
