--- a/tensile-dimensions/package.cabal
+++ b/tensile-dimensions/package.cabal
@@ -20,6 +20,7 @@ library
     exposed-modules:
         Numeric.Tensile.Dimensions
         Numeric.Tensile.Dimensions.Dim
+        Numeric.Tensile.Dimensions.Dim.Class
         Numeric.Tensile.Dimensions.Dims
         Numeric.Tensile.Dimensions.Index
         Numeric.Tensile.Dimensions.Permutation
