--- a/tensile-dimensions/package.cabal
+++ b/tensile-dimensions/package.cabal
@@ -22,6 +22,7 @@ library
         Numeric.Tensile.Dimensions.Dim
         Numeric.Tensile.Dimensions.Dim.Class
         Numeric.Tensile.Dimensions.Dims
+        Numeric.Tensile.Dimensions.Dims.Class
         Numeric.Tensile.Dimensions.Index
         Numeric.Tensile.Dimensions.Permutation
         Numeric.Tensile.Dimensions.Types
