--- a/tensile-dimensions/package.cabal
+++ b/tensile-dimensions/package.cabal
@@ -30,6 +30,7 @@ library
         Numeric.Tensile.Dimensions.Types
         Test.Numeric.Tensile.Dimensions.Gen
         Test.Numeric.Tensile.Dimensions.Idxs.Predicate
+        Test.Numeric.Tensile.Dimensions.Dims.Predicate
     build-depends:
         base == 4.*,
         combinat,
@@ -56,7 +57,8 @@ test-suite test
     main-is:            
         test.hs
     other-modules:
-        Test.Numeric.Tensile.Dimensions.Idxs.Property 
+        Test.Numeric.Tensile.Dimensions.Idxs.Property
+        Test.Numeric.Tensile.Dimensions.Dims.Property  
     build-depends:       
         base == 4.*,
         hedgehog,
