--- a/tensile-dimensions/package.cabal
+++ b/tensile-dimensions/package.cabal
@@ -18,8 +18,15 @@ library
     hs-source-dirs: 
         src
     exposed-modules:
-        Numeric.Tensile.Dimensions.Index
-        Numeric.Tensile.Dimensions.Permutation
+        Numeric.Tensile.Dimensions
+        Numeric.Tensile.Dimensions.Dim
+        Numeric.Tensile.Dimensions.Dim.Class
+        Numeric.Tensile.Dimensions.Dims
+        Numeric.Tensile.Dimensions.Dims.Class
+        Numeric.Tensile.Dimensions.Idx.Class
+        Numeric.Tensile.Dimensions.Idxs
+        Numeric.Tensile.Dimensions.Idxs.Class
+        Numeric.Tensile.Dimensions.Perm
         Numeric.Tensile.Dimensions.Types
     build-depends:
         base == 4.*,
