--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,7 @@
 resolver: lts-12.25
 
 packages:
-  - 'tensile'
   - 'tensile-dimensions'
-  - 'tensile-signatures'
   - 'tensile-tensorflow'
   - location:
       git: https://github.com/cmk/haskell.git
@@ -22,6 +20,8 @@ packages:
       - tensorflow-test
     extra-dep: true
 extra-deps:
+  - combinat-0.2.9.0
+  - dimensions-1.0.1.1
   - proto-lens-protobuf-types-0.3.0.1
   - proto-lens-0.3.1.0
   - proto-lens-protoc-0.3.1.2
