--- a/tensile-tensorflow/tensile-tensorflow.cabal
+++ b/tensile-tensorflow/tensile-tensorflow.cabal
@@ -14,16 +14,45 @@ source-repository head
   type: git
   location: https://github.com/cmk/tensile
 
-
 library 
     hs-source-dirs: 
-        ref/src
+        lib/src
+        lib/test
+    exposed-modules:
+        -- Numeric.Tensile.Tensor
+        -- Numeric.Tensile.Operations.Linear.Unlifted
+        -- Test.Numeric.Tensile.Operations.Linear.Predicate
+        -- Test.Numeric.Tensile.Tensor.Gen
+    build-depends:
+        base == 4.*,
+        backprop,
+        hedgehog,
+        tensile-dimensions == 0.0.*,
+        reference,
+        vector,
+        vector-sized
+    default-extensions: 
+        ConstraintKinds, 
+        FlexibleContexts,
+        RankNTypes,
+        ScopedTypeVariables,
+        TypeInType,
+        TypeApplications,
+        TypeFamilies,
+        TypeOperators 
+    default-language: Haskell2010
+
+library reference
+    hs-source-dirs: 
+        ref
     exposed-modules:
         Numeric.Tensile.Tensor.Internal
         Numeric.Tensile.Operations.Linear.Internal     
         Numeric.Tensile.Operations.Quantization.Internal
+        Test.Numeric.Tensile.Tensor.Gen.Internal 
     build-depends:
         base == 4.*,
+        hedgehog,
         tensile-dimensions == 0.0.*,
         tensorflow,
         vector,
@@ -40,21 +69,3 @@ library
         TypeOperators 
     default-language: Haskell2010
 
-library tensile-tensorflow-test
-    hs-source-dirs: 
-        ref/test
-    exposed-modules:
-        Test.Numeric.Tensile.Tensor.Gen.Internal    
-    build-depends:
-        base == 4.*,
-        hedgehog,
-        tensile-dimensions == 0.0.*,
-        tensile-tensorflow,
-        vector
-    default-extensions: 
-        ScopedTypeVariables,
-        TypeApplications,
-        TypeInType,
-        TypeOperators,
-        OverloadedLists
-    default-language: Haskell2010
