Switch to stack build.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,10 +205,10 @@ workflows:
   build:
     jobs:
       # - cabal-ghc-8.6.3
-      - cabal-ghc-8.4.4
+      # - cabal-ghc-8.4.4
       #- cabal-ghc-8.2.2
       #- cabal-ghc-8.0.2
       #- cabal-ghc-7.10.3
-      #- stack-ghc-8.4
+      - stack-ghc-8.4
       #- stack-ghc-8.2
       #- coveralls-ghc-8.2.2
