--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,9 @@
 resolver: lts-12.25
 
 packages:
+  - 'tensile'
   - 'tensile-dimensions'
+  - 'tensile-signatures'
   - 'tensile-tensorflow'
   - location:
       git: https://github.com/cmk/haskell.git
