--- a/tensile/tensile.cabal
+++ b/tensile/tensile.cabal
@@ -25,8 +25,9 @@ library
         Test.Numeric.Tensile.Tensor.Gen
     build-depends:
         base == 4.*,
-        tensile-signatures == 0.0.*,
         tensile-dimensions == 0.0.*,
+        -- tensile-signatures == 0.0.*,
+        tensile-tensorflow == 0.0.*,
         backprop,
         vector,
         vector-sized
@@ -46,7 +47,7 @@ library local-signatures
         local
     build-depends:
         base == 4.*,
-        tensile-signatures == 0.0.*
+        tensile-signatures
     default-language: Haskell2010
 
 library reference
@@ -91,7 +92,8 @@ test-suite test
         hedgehog,
         tensile,
         tensile-dimensions == 0.0.*,
-        reference
+        tensile-tensorflow == 0.0.*
+        --reference
     default-extensions:
         ScopedTypeVariables,
         TypeApplications,
@@ -106,9 +108,9 @@ executable main
         main.hs
     build-depends:
         base == 4.*,
-        reference,
-        tensile,
+        tensile == 0.0.*,
         tensile-dimensions == 0.0.*,
+        reference,
         vector
     default-language: Haskell2010
     default-extensions: 
