Try porting tf osx script.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,12 +96,12 @@ preinstall: &preinstall
 
         echo "Extracting and copying libtensorflow..."
         tar zxf "$TMP_DIR/libtensorflow.tar.gz" -C "$TMP_DIR"
-        sudo rsync -a "$TMP_DIR/lib/" /usr/local/lib
-        sudo rsync -a "$TMP_DIR/include/" /usr/local/include
+        rsync -a "$TMP_DIR/lib/" /usr/local/lib
+        rsync -a "$TMP_DIR/include/" /usr/local/include
         rm -rf "$TMP_DIR"
-        sudo mv /usr/local/lib/libtensorflow.so /usr/local/lib/libtensorflow.dylib
+        mv /usr/local/lib/libtensorflow.so /usr/local/lib/libtensorflow.dylib
 
-        sudo install_name_tool -id libtensorflow.dylib /usr/local/lib/libtensorflow.dylib
+        install_name_tool -id libtensorflow.dylib /usr/local/lib/libtensorflow.dylib
 
         echo "Installing submodule dependencies"
         git submodule update --init --recursive
