--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,7 +223,18 @@ jobs:
             cd haskell
             git submodule update --init --recursive
             cd ..
-            bash -c "$PACKCHECK stack RESOLVER=lts-12"
+            curl -O -L https://github.com/commercialhaskell/stack/releases/download/v1.7.1/stack-1.7.1-linux-x86_64.tar.gz && \
+            tar zxf stack-1.7.1-linux-x86_64.tar.gz -C /usr/local/bin stack-1.7.1-linux-x86_64/stack --strip 1 && \
+            # Installs protoc and the libraries.
+            curl -O -L https://github.com/google/protobuf/releases/download/v3.2.0/protoc-3.2.0-linux-x86_64.zip && \
+            unzip -d /usr/local protoc-3.2.0-linux-x86_64.zip bin/protoc && \
+            chmod 755 /usr/local/bin/protoc && \
+            curl -O https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-cpu-linux-x86_64-1.9.0.tar.gz && \
+            tar zxf libtensorflow-cpu-linux-x86_64-1.9.0.tar.gz -C /usr/local && \
+            ldconfig && \
+            stack setup && \
+            stack build  # test --only-dependencies
+            # bash -c "$PACKCHECK stack RESOLVER=lts-12"
         - *save
   stack-ghc-8.2:
       <<: *env
