--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,12 +229,9 @@ jobs:
             curl -O https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-cpu-linux-x86_64-1.9.0.tar.gz && \
             tar zxf libtensorflow-cpu-linux-x86_64-1.9.0.tar.gz -C /usr/local && \
             ldconfig
-        - run: |
-            curl -O -L https://github.com/commercialhaskell/stack/releases/download/v1.7.1/stack-1.7.1-linux-x86_64.tar.gz && \
-            tar zxf stack-1.7.1-linux-x86_64.tar.gz -C /usr/local/bin stack-1.7.1-linux-x86_64/stack --strip 1 && \
-            stack setup && \
-            stack build  # test --only-dependencies
-            # bash -c "$PACKCHECK stack RESOLVER=lts-12"
+            bash -c "../packcheck.sh stack RESOLVER=lts-12"
+            cd ..
+            bash -c "./packcheck.sh stack RESOLVER=lts-12"
         - *save
   stack-ghc-8.2:
       <<: *env
