--- a/tensile/tensile.cabal
+++ b/tensile/tensile.cabal
@@ -90,6 +90,7 @@ test-suite test
     build-depends:       
         base == 4.*,
         hedgehog,
+        -- hedgehog-classes,
         tensile,
         tensile-dimensions == 0.0.*,
         tensile-tensorflow == 0.0.*
