Wip misc stuff.

--- a/tensile/tensile.cabal
+++ b/tensile/tensile.cabal
@@ -31,7 +31,8 @@ library
         backprop,
         vector,
         vector-sized
-    default-extensions: 
+    default-extensions:
+        AllowAmbiguousTypes, 
         ConstraintKinds, 
         FlexibleContexts,
         RankNTypes,
