transpose props passing with tf.

--- a/tensile-tensorflow/tensile-tensorflow.cabal
+++ b/tensile-tensorflow/tensile-tensorflow.cabal
@@ -27,6 +27,7 @@ library
         base == 4.*,
         tensile-dimensions == 0.0.*,
         bytestring,
+        combinat,
         hedgehog,
         finite-typelits,
         tensorflow,
