Dev/tf mvp (#14)
Transpose props passing with tf.

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,9 @@
 resolver: lts-12.25
 
 packages:
+  - 'tensile'
   - 'tensile-dimensions'
+  - 'tensile-signatures'
   - 'tensile-tensorflow'
 extra-deps:
   - haskell/tensorflow
@@ -10,6 +12,7 @@ extra-deps:
   - haskell/tensorflow-mnist
   - haskell/tensorflow-mnist-input-data
   - haskell/tensorflow-opgen
+  - haskell/tensorflow-ops
   - haskell/tensorflow-proto
   - haskell/tensorflow-records
   - haskell/tensorflow-records-conduit
