Add idxs functions and prop.

--- a/tensile-tensorflow/tensile-tensorflow.cabal
+++ b/tensile-tensorflow/tensile-tensorflow.cabal
@@ -33,6 +33,7 @@ library
         tensorflow,
         tensorflow-core-ops,
         tensorflow-ops,
+        transformers,
         vector,
         vector-sized
     default-extensions:
